First cut story support incl rte
